ingress-nginx/hello-kube-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-kube
spec:
  type: ClusterIP
  selector:
    greeting: hello
    department: kubernetes
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
